@@ -2,6 +2,7 @@ package com.sap.sailing.server.gateway.jaxrs.api;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -232,7 +233,7 @@ public class EventsResource extends AbstractSailingServerResource {
                         eventAndLeaderboardGroupAndLeaderboard.getC().getRegatta().getRegistrationLinkSecret());
                 jsonResponse.put("leaderboard", eventAndLeaderboardGroupAndLeaderboard.getC().getName());
             }
-            response = ok(jsonResponse.toJSONString(), MediaType.APPLICATION_JSON);
+            response = Response.ok(streamingOutput(jsonResponse)).build();
         }
         return response;
     }
@@ -368,9 +369,7 @@ public class EventsResource extends AbstractSailingServerResource {
                     new VenueJsonSerializer(new CourseAreaJsonSerializer()), new LeaderboardGroupBaseJsonSerializer(),
                     new TrackingConnectorInfoJsonSerializer());
             JSONObject eventJson = eventSerializer.serialize(event);
-
-            String json = eventJson.toJSONString();
-            response = Response.ok(json).header("Content-Type", MediaType.APPLICATION_JSON + ";charset=UTF-8").build();
+            response = Response.ok(streamingOutput(eventJson)).build();
         }
         return response;
     }
@@ -409,9 +408,7 @@ public class EventsResource extends AbstractSailingServerResource {
                         filterByLeaderboard, filterByDayOffset, clientTimeZoneOffset, getService());
                 JSONObject raceStatesJson = eventRaceStatesSerializer.serialize(
                         new Pair<Event, Iterable<Leaderboard>>(event, getService().getLeaderboards().values()));
-                String json = raceStatesJson.toJSONString();
-                response = Response.ok(json).header("Content-Type", MediaType.APPLICATION_JSON + ";charset=UTF-8")
-                        .build();
+                response = Response.ok(streamingOutput(raceStatesJson)).build();
             } else {
                 response = Response.status(Status.FORBIDDEN).build();
             }
@@ -422,11 +419,13 @@ public class EventsResource extends AbstractSailingServerResource {
     private RegattaLeaderboard validateAndCreateRegatta(String regattaNameParam, String boatClassNameParam,
             String scoringSchemeParam, UUID courseAreaId, String buoyZoneRadiusInHullLengthsParam,
             String useStartTimeInterferenceParam, String controlTrackingFromStartAndFinishTimesParam,
-            String rankingMetricParam, List<Integer> leaderboardDiscardThresholdsParam, String numberOfRacesParam,
-            boolean canBoatsOfCompetitorsChangePerRace, CompetitorRegistrationType competitorRegistrationType,
-            String competitorRegistrationSecret) throws ParseException, NotFoundException {
+            String autoRestartTrackingUponCompetitorSetChangeParam, String rankingMetricParam, List<Integer> leaderboardDiscardThresholdsParam,
+            String numberOfRacesParam, boolean canBoatsOfCompetitorsChangePerRace,
+            CompetitorRegistrationType competitorRegistrationType, String competitorRegistrationSecret) throws ParseException, NotFoundException {
         boolean controlTrackingFromStartAndFinishTimes = controlTrackingFromStartAndFinishTimesParam == null ? false
                 : Boolean.parseBoolean(controlTrackingFromStartAndFinishTimesParam);
+        boolean autoRestartTrackingUponCompetitorSetChange = autoRestartTrackingUponCompetitorSetChangeParam == null ? false
+                : Boolean.parseBoolean(autoRestartTrackingUponCompetitorSetChangeParam);
         boolean useStartTimeInterference = useStartTimeInterferenceParam == null ? true
                 : Boolean.parseBoolean(useStartTimeInterferenceParam);
         double buoyZoneRadiusInHullLengths = buoyZoneRadiusInHullLengthsParam == null ? 3.0
@@ -459,8 +458,9 @@ public class EventsResource extends AbstractSailingServerResource {
                     public Regatta call() throws Exception {
                         return getService().apply(new AddSpecificRegatta(regattaName, boatClassName,
                                 canBoatsOfCompetitorsChangePerRace, competitorRegistrationType, competitorRegistrationSecret, null, null, regattaId, regattaCreationParametersDTO,
-                                /* isPersistent */ true, scoringScheme, courseAreaId, buoyZoneRadiusInHullLengths,
-                                useStartTimeInterference, controlTrackingFromStartAndFinishTimes, rankingMetric));
+                                /* isPersistent */ true, scoringScheme,
+                                courseAreaId==null?Collections.emptySet():Collections.singleton(courseAreaId), buoyZoneRadiusInHullLengths,
+                                useStartTimeInterference, controlTrackingFromStartAndFinishTimes, autoRestartTrackingUponCompetitorSetChange, rankingMetric));
                     }
                 });
         final RegattaLeaderboard leaderboard = addLeaderboard(regattaName, leaderboardDiscardThresholds);
@@ -516,7 +516,14 @@ public class EventsResource extends AbstractSailingServerResource {
         final TimePoint startDate = parseTimePoint(startDateParam, startDateAsMillis, now());
         final TimePoint endDate = parseTimePoint(endDateParam, endDateAsMillis, new MillisecondsTimePoint(addOneWeek(startDate.asDate())));
         URL officialWebsiteURL = officialWebsiteURLParam == null ? null :  toURL(officialWebsiteURLParam);
-        URL baseURL = baseURLParam == null ? uriInfo.getBaseUri().toURL() : toURL(baseURLParam);
+        final URI baseUri = uriInfo.getBaseUri();
+        final int port = baseUri.getPort();
+        // guess the protocol; when behind an SSL-offloading reverse proxy or load balancer, all we'll see is a regular HTTP
+        // request; yet, we'd likely want the client to make requests using HTTPS, unless we see a dedicated port in the request
+        // that is not the HTTPS default port 443:
+        final String scheme = (port >= 0 && port != 443) ? "http" : "https";
+        URL baseURL = baseURLParam == null ? new URL(scheme+":"+baseUri.getSchemeSpecificPart().
+                substring(0, baseUri.getSchemeSpecificPart().length()-baseUri.getPath().length())) : toURL(baseURLParam);
         List<UUID> leaderboardGroupIds = leaderboardGroupIdsListParam == null ? new ArrayList<UUID>() : toUUIDList(leaderboardGroupIdsListParam);
         UUID eventId = UUID.randomUUID();
         // ignoring sailorsInfoWebsiteURLs, images, videos
@@ -531,7 +538,6 @@ public class EventsResource extends AbstractSailingServerResource {
             throw new IllegalArgumentException(ExceptionManager.incorrectParameterValue(competitorRegistrationTypeString,
                     StringUtils.join(CompetitorRegistrationType.values(), ", ")));
         }
-        
         Callable<Util.Triple<Event, LeaderboardGroup, RegattaLeaderboard>> doCreationAction = new Callable<Util.Triple<Event, LeaderboardGroup, RegattaLeaderboard>>() {
             @Override
             public Util.Triple<Event, LeaderboardGroup, RegattaLeaderboard> call() throws Exception {
@@ -559,9 +565,9 @@ public class EventsResource extends AbstractSailingServerResource {
                     leaderboard = validateAndCreateRegatta(regattaAndLeaderboardName, boatClassName,
                             /* scoringSchemeParam */ scoringScheme, courseArea.getId(), /* buoyZoneRadiusInHullLengthsParam */ null,
                             /* useStartTimeInterferenceParam */ null, /* controlTrackingFromStartAndFinishTimesParam */ null,
-                            /* rankingMetricParam */ rankingMetric, /* leaderboardDiscardThresholdsParam */ leaderboardDiscardThresholdsParam,
-                            numberOfRacesParam, canBoatsOfCompetitorsChangePerRace, competitorRegistrationType,
-                            localCompetitorRegistrationSecret);
+                            /* autoRestartTrackingUponCompetitorSetChangeParam */ null, /* rankingMetricParam */ rankingMetric,
+                            /* leaderboardDiscardThresholdsParam */ leaderboardDiscardThresholdsParam, numberOfRacesParam, canBoatsOfCompetitorsChangePerRace,
+                            competitorRegistrationType, localCompetitorRegistrationSecret);
                     if (leaderboardGroup != null) {
                         getService().apply(new UpdateLeaderboardGroup(leaderboardGroup.getName(), leaderboardGroup.getName(),
                                 leaderboardGroup.getDescription(), leaderboardGroup.getDisplayName(),
@@ -588,7 +594,6 @@ public class EventsResource extends AbstractSailingServerResource {
                 RoleDefinition roleDef = getSecurityService()
                         .getRoleDefinition(SailingViewerRole.getInstance().getId());
                 getSecurityService().putRoleDefinitionToUserGroup(ownerGroup, roleDef, true);
-
                 getSecurityService().addUserToUserGroup(ownerGroup, getCurrentUser());
                 return getSecurityService().doWithTemporaryDefaultTenant(ownerGroup, doCreationAction);
             } else {
@@ -683,7 +688,8 @@ public class EventsResource extends AbstractSailingServerResource {
                 SecuredDomainType.EVENT.getStringPermissionForObject(DefaultActions.UPDATE, event));
         String[] courseAreaNames = new String[] { courseAreaName };
         UUID[] courseAreaIds = new UUID[] { UUID.randomUUID() };
-        return getService().apply(new AddCourseAreas(event.getId(), courseAreaNames, courseAreaIds))[0];
+        final CourseArea[] courseAreas = getService().apply(new AddCourseAreas(event.getId(), courseAreaNames, courseAreaIds));
+        return courseAreas[0];
     }
 
     private void addLeaderboardToDefaultLeaderboardGroup(final RegattaLeaderboard leaderboard) {
@@ -691,7 +697,7 @@ public class EventsResource extends AbstractSailingServerResource {
         for (Event event : getService().getAllEvents()) {
             Iterable<CourseArea> courseAreas = event.getVenue().getCourseAreas();
             for (CourseArea courseArea : courseAreas) {
-                if (courseArea.getId().equals(leaderboard.getRegatta().getDefaultCourseArea().getId())) {
+                if (Util.contains(leaderboard.getRegatta().getCourseAreas(), courseArea.getId())) {
                     for (LeaderboardGroup lg : event.getLeaderboardGroups()) {
                         // if leaderboard group is default leaderboard group, then add leaderboard
                         if (lg.getName().equals(event.getName())) {
@@ -741,10 +747,6 @@ public class EventsResource extends AbstractSailingServerResource {
                 .apply(new CreateRegattaLeaderboard(new RegattaName(regattaName), regattaName, discardThresholds));
                     }
                 });
-    }
-
-    private Response ok(String message, String mediaType) {
-        return Response.ok(message).header("Content-Type", mediaType + ";charset=UTF-8").build();
     }
 
     private Response getBadEventErrorResponse(String eventId) {
